<resources>
    <string name="app_name">集港联盟</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Car">车主</string>
    <string name="Huo">货主</string>
    <string name="My">我</string>
    <string name="set">设置</string>
    <string name="no_network_promote">亲,请连接网络!</string>
    <string name="no_data">亲,目前没有数据!</string>

    <string name="my_order">我的订单</string>
    <string name="addcar">添加车辆</string>
    <string name="find">发现</string>
    <string name="find1">保险</string>
    <string name="find2">汽车救援</string>
    <string name="find3">二手车</string>
    <string name="find4">抵押货</string>
    <string name="find5">投资理财</string>
    <string name="licai">我要理财</string>
    <string name="news">消息</string>
    <string name="news1">港口信息</string>
    <string name="zuoye">作业信息</string>
    <string name="yujing">作业预警</string>
    <string name="news2">交通路况</string>
    <string name="gaosu">高速公路注意信息</string>
    <string name="guodao">国道信息</string>
    <string name="news3">通知</string>
    <string name="news4">关于我们</string>
    <string name="user_info">个人信息</string>
    <string name="business_change">业务变更</string>
    <string name="activity">平台活动</string>
    <string name="inform">会员活动</string>

    <string name="Duichangname">堆场名称</string>
    <string name="baoxian">保险详情</string>
    <string name="merchandise">积分查询</string>
    <string name="exchange">兑换商品</string>
    <string name="exchange_address">地址</string>
    <string name="exchange_address_input">请输入送货地址</string>
    <string name="exchange_phoneNum">联系方式</string>
    <string name="exchange_phoneNum_input">请输入联系方式</string>
    <string name="account">账户</string>
    <string name="statistics">统计栏</string>
    <string name="privilege">优惠券</string>
    <string name="inviter">邀请活动</string>
    <string name="handbook">平台指南</string>
    <string name="about_us">关于我们</string>
    <string name="fangxiang">办理放箱单</string>
    <string name="tixiang">办理提箱小票</string>

    <string name="home">首页</string>
    <string name="find_resource">找货</string>
    <string name="my_cars">我的车辆</string>
    <string name="traffic">交通路况</string>
    <string name="order_par">订单详情</string>
    <string name="Grad_order">抢单承运</string>
    <string name="luoxiang">我要落箱</string>
    <string name="ship_query">船期查询</string>
    <string name="O_pic2">堆场窗口</string>
    <string name="O_pic3">关注订单</string>
    <string name="public_resource">发布货源</string>
    <string name="resource_info">货源信息</string>
    <string name="recharge_cash">充值/提现</string>
    <string name="O_pic4">车辆定位</string>
    <string name="O_pic5">拼车窗口</string>
    <string name="O_pic6">车辆定位</string>
    <string name="second_share_car">拼车</string>
    <string name="second_import">进口</string>
    <string name="second_export">出口</string>
    <string name="second_more">更多</string>
    <string name="query">查询</string>
    <string name="login"><u>立即注册</u></string>
    <string name="order">订单</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="more">加载更多</string>
    <string name="loading">正在加载...</string>
    <string name="no_more">没有更多了</string>

    <string name="account_username">用户名</string>
    <string name="account_contact">负责人姓名</string>
    <string name="account_phone_number">联系电话</string>
    <string name="account_address">地址</string>
    <string name="account_car_number">车牌号</string>
    <string name="account_gps_number">GPS编号</string>
    <string name="account_box_type">箱型</string>
    <string name="account_maintain_date">保养日期</string>
    <string name="account_insurance_date">保险日期</string>
    <string name="account_gps_expired_date">GPS到期时间</string>
    <string name="account_goods_tran">货物货运</string>
    <string name="present_no">提货单号:</string>
    <string name="account_car_list">车辆列表</string>

    <string name="my_set_info_company">公司名称</string>
    <string name="my_set_info_password">密码</string>
    <string name="my_set_info_modify_password">修改密码</string>
    <string name="my_set_info_old_password">请输入旧密码</string>
    <string name="my_set_info_new_password">请设置新密码</string>
    <string name="my_set_info_confirm_password">请再次输入新密码</string>
    <string name="my_set_info_old_empty">原密码不能为空</string>
    <string name="my_set_info_new_empty">新密码不能为空</string>
    <string name="my_set_info_confirm_empty">确认新密码不能为空</string>
    <string name="my_set_info_new_confirm_diff">新密码两次输入不一致</string>

    <string name="statistics_number">承载次数</string>
    <string name="statistics_pay">我赚的钱</string>
    <string name="statistics_integral">我的积分</string>
    <string name="statistics_delivery">发货次数</string>
    <string name="statistics_cost">我的结费</string>
    <string name="statistics_pickup_cash">可提现</string>
    <string name="statistics_recharge">我要充值</string>

    <string name="pickup_cash">我要提现</string>
    <string name="pickup_cash_promote">最高可提现%1$.2f元</string>
    <string name="pickup_cash_record">银行卡记录>></string>
    <string name="pickup_cash_amount">提现金额</string>
    <string name="pickup_cash_amount_input">请输入提现金额</string>
    <string name="pickup_cash_bank_name">银行全称</string>
    <string name="pickup_cash_bank_name_input">请输入银行和支行全称</string>
    <string name="pickup_cash_card_num">卡号</string>
    <string name="pickup_cash_card_num_input">请输入银行卡号</string>
    <string name="pickup_cash_name">姓名</string>
    <string name="pickup_cash_name_input">请输入姓名</string>
    <string name="pickup_cash_tel">电话</string>
    <string name="pickup_cash_tel_input">请输入电话</string>
    <string name="pickup_cash_confirm">确认提交</string>

    <string name="recharge_amt">充值金额</string>
    <string name="recharge_amt_input">充值金额不得小于500元</string>
    <string name="recharge_amt_wrong">充值金额输入错误</string>
    <string name="recharge_confirm">确认充值</string>

    <string name="pickup_record">历史记录</string>
    <string name="pickup_record_amount">提现金额:%1$.2f元</string>
    <string name="pickup_record_time">提现时间:%1$s</string>
    <string name="pickup_record_bank_name">银行全称:%1$s</string>
    <string name="pickup_record_card_num">卡号:%1$s</string>
    <string name="pickup_record_name">姓名:%1$s</string>
    <string name="pickup_record_tel">电话:%1$s</string>

    <string name="Yuan">元</string>
    <string name="times">次</string>
    <string name="score">分</string>
    <string name="promote">提示</string>
    <string name="confirm_delete">确认删除?</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <string name="about_logo_edition">Logo版本</string>
    <string name="about_privacy">隐私声明</string>
    <string name="about_fun_introduce">功能介绍</string>
    <string name="about_handbook">新手指南</string>
    <string name="agree_cancel">同意</string>
    <string name="refuse_cancel">不同意</string>
    <string name="agreed_cancel">已同意取消</string>
    <string name="refused_cancel">已不同意取消</string>

    <string name="car_number_empty">请选择车牌号</string>
    <string name="box_type_empty">请选择箱型</string>
    <string name="box_number_empty">请填写数量</string>
    <string name="tidanhao">请填写提单号</string>
    <string name="cheming">请填写船名</string>
    <string name="chuanci">请填写船次</string>

    <string name="pay_confirm">支付认证</string>
    <string name="pay_create_order">正在生成订单数据...</string>
    <string name="pay_info">支付信息</string>
    <string name="pay_info_bankNo">银行卡卡号</string>
    <string name="pay_info_bankNo_input">请输入银行卡卡号(选填)!</string>
    <string name="pay_info_username">账户名</string>
    <string name="pay_info_username_input">请输入真实姓名(选填)!</string>
    <string name="pay_info_cer_type">证件类型</string>
    <string name="pay_info_cer_type_input">请选择证件类型(选填)!</string>
    <string name="pay_info_cer_no">身份证号</string>
    <string name="pay_info_cer_no_input">请输入身份证号(选填)!</string>
    <string name="pay_info_confirm">确认支付</string>
</resources>
