<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/writer">

    <TextView
        android:id="@+id/pickup_record_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/pickup_record_amount"/>

    <TextView
        android:id="@+id/pickup_record_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/pickup_record_time"/>

    <TextView
        android:id="@+id/pickup_record_bank_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/pickup_record_bank_name"/>

    <TextView
        android:id="@+id/pickup_record_card_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/pickup_record_card_num"/>

    <TextView
        android:id="@+id/pickup_record_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/pickup_record_name"/>

    <TextView
        android:id="@+id/pickup_record_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/pickup_record_tel"/>

</LinearLayout>