<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <com.DLPort.myview.TitleView
        android:id="@+id/modify_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.DLPort.myview.TitleView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="@string/my_set_info_old_password" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="@string/my_set_info_new_password" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="@string/my_set_info_confirm_password" />

            <Button
                android:id="@+id/modify_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/order_button"
                android:text="@string/my_set_info_modify_password"
                android:textColor="@color/writer"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>